<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ff00"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name: Stephen Noble"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_weight="1"
                android:text="Total Marks: "
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="Questions Completed: "
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/q_completed"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#00ffff"
        android:padding="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="#ff0000"
            android:text="@string/true_button"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="#ff0000"
            android:text="@string/false_button"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#ff0000"
            android:text="@string/cheat_button"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="#ff0000"
            android:text="@string/hint_button"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#ff0000"
            android:drawablePadding="4dp"
            android:text="@string/next_button"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="#ff0000"
            android:text="@string/prev_button"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>
